<resources>
    <string name="app_name">AutoMarket</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="guest_mode">Guest mode</string>
    <string name="forget_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="question_number_1">אני רוצה לקנות</string>
    <string name="signup_answer_intro">Help us to help you!<br/>Please answer a few questions<br/>(Optional)</string>
    <string name="skip">Skip</string>
    <string name="follow">follow car</string>
    <string name="see_profile">see profile</string>
    <string name="sells">Sells</string>
    <string name="new_user">Sign up here</string>
    <string name="provide_email_and_password" translatable="false">Please provide an email and password</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="empty_string">%1$d </string>
    <string name="missMatchPassword">Password doesn\'t match</string>
    <string name="password_length_error">Password must be greater or equal to 6</string>
    <string name="switch_to_prime_profile">Switch to prime</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="post">Post</string>
    <string name="car_model">Car model:</string>
    <string name="manufacture_year">Manufacture year:</string>
    <string name="description">Description:</string>
    <string name="message_to_seller">message to seller</string>
    <string name="bio">Bio</string>
    <string name="profile_name">Profile name</string>
</resources>